tests/expectations/compiler/bugs/b28793.out
Error [ETYC0372003]: Expected type `()` but type `Future<Fn()>` was found
    --> compiler-test:4:22
     |
   4 |         return final { bar(); };
     |                      ^^^^^^^^^^
